test_regress/t/t_covergroup_method_bad.out
%Error: t/t_covergroup_method_bad.v:16:10: Member 'some_unknown_method' not found in covergroup 'cg'
                                         : ... note: In instance 't'
   16 |     cov1.some_unknown_method.name = "new_cov1_name";   
      |          ^~~~~~~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_covergroup_method_bad.v:16:30: Unsupported: Member call on object 'CONST '1'h0'' which is a 'BASICDTYPE 'logic''
                                                     : ... note: In instance 't'
   16 |     cov1.some_unknown_method.name = "new_cov1_name";   
      |                              ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
